image alignment and button block fixes, pre/code edits to backend

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -364,9 +364,45 @@ body .editor-styles-wrapper,
 }
 
 [data-align="center"] .wp-block-image .components-resizable-box__container,
-[data-align="center"] .wp-block-image img {
+[data-align="center"] .wp-block-image img,
+.wp-block[data-align="center"]>.wp-block-image img,
+.aligncenter.wp-block-image img,
+.aligncenter.wp-block-image>div {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+[data-type="core/image"] img {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.wp-block[data-align="left"] [data-type="core/image"],
+.wp-block[data-align="left"]>.wp-block-image,
+.alignleft.wp-block-image>img {
+	margin-left: 0px;
+	margin-right: 30px;
+}
+
+.wp-block[data-align="left"]>.wp-block-image,
+.wp-block[data-align="left"]>.wp-block-image>.components-resizable-box__container,
+.alignleft.wp-block-image>img,
+.alignleft.wp-block-image>div {
+	float: left;
+}
+
+.wp-block[data-align="right"] [data-type="core/image"],
+.wp-block[data-align="right"]>.wp-block-image,
+.alignright.wp-block-image img {
+	margin-left: 30px;
+	margin-right: 0px;
+}
+
+.wp-block[data-align="right"]>.wp-block-image,
+.wp-block[data-align="right"]>.wp-block-image>.components-resizable-box__container,
+.alignright.wp-block-image img,
+.alignright.wp-block-image>div {
+	float: right;
 }
 
 /* WordPress cover block and core image block on post edit (not page edit) */
@@ -402,12 +438,20 @@ html :where(.editor-styles-wrapper) kbd {
 }
 
 /* social link block */
-.editor-styles-wrapper .wp-block-social-links li {
-	margin: 0px 6px 0px 0px;
-}
-
 .editor-styles-wrapper .wp-block-social-links li:last-child {
 	margin-right: 0px;
+}
+
+.editor-styles-wrapper .wp-block-social-links.aligncenter {
+	justify-content: center;
+}
+
+.editor-styles-wrapper .wp-block-social-links.alignleft {
+	justify-content: flex-start;
+}
+
+.editor-styles-wrapper .wp-block-social-links.alignright {
+	justify-content: flex-end;
 }
 
 /* make mobile editing on gutenberg possible */
